{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 251,
  "lineage": "4582c680-26e4-4d0f-c7a2-2af1eba0cc8a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ef934a7dd715d6d2",
            "domain": "vpc",
            "id": "eipalloc-0cceada323227091a",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-06d29bbe47baddae0",
            "private_dns": "ip-10-0-1-125.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.125",
            "public_dns": "ec2-18-178-237-196.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.178.237.196",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a06e2548cdae60cf",
            "domain": "vpc",
            "id": "eipalloc-0c1c119a930324f33",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-091983da00dbd0925",
            "private_dns": "ip-10-0-2-72.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.72",
            "public_dns": "ec2-35-74-175-74.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.74.175.74",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:200654050098:internet-gateway/igw-0d8ba700accb5b399",
            "id": "igw-0d8ba700accb5b399",
            "owner_id": "200654050098",
            "vpc_id": "vpc-0ffaa0374b337849b"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cceada323227091a",
            "id": "nat-0636e1e09f7234b87",
            "network_interface_id": "eni-06d29bbe47baddae0",
            "private_ip": "10.0.1.125",
            "public_ip": "18.178.237.196",
            "subnet_id": "subnet-0934423d115bce1ea"
          },
          "dependencies": [
            "aws_subnet.public_0",
            "aws_vpc.example",
            "aws_eip.nat_gateway_0",
            "aws_internet_gateway.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c1c119a930324f33",
            "id": "nat-01ed773f7a59059a2",
            "network_interface_id": "eni-091983da00dbd0925",
            "private_ip": "10.0.2.72",
            "public_ip": "35.74.175.74",
            "subnet_id": "subnet-0ff481cf97d15589d"
          },
          "dependencies": [
            "aws_subnet.public_1",
            "aws_vpc.example",
            "aws_eip.nat_gateway_1",
            "aws_internet_gateway.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:200654050098:subnet/subnet-0934423d115bce1ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0934423d115bce1ea",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "200654050098",
            "vpc_id": "vpc-0ffaa0374b337849b"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:200654050098:subnet/subnet-0ff481cf97d15589d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ff481cf97d15589d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "200654050098",
            "vpc_id": "vpc-0ffaa0374b337849b"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:200654050098:vpc/vpc-0ffaa0374b337849b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a605d01bbf987c3",
            "default_route_table_id": "rtb-00a2c17d2ebb33974",
            "default_security_group_id": "sg-0d7e60f3a339f7819",
            "dhcp_options_id": "dopt-7f968518",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ffaa0374b337849b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00a2c17d2ebb33974",
            "owner_id": "200654050098",
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            }
          }
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:200654050098:security-group/sg-059a9b8e5c2eb0c4d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-059a9b8e5c2eb0c4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "http-redirect-sg",
            "name_prefix": "",
            "owner_id": "200654050098",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ffaa0374b337849b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:200654050098:security-group/sg-0ff66b3c24ee570cd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ff66b3c24ee570cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http_sg",
            "name_prefix": "",
            "owner_id": "200654050098",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ffaa0374b337849b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:200654050098:security-group/sg-03d8862959384af99",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03d8862959384af99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https_sg",
            "name_prefix": "",
            "owner_id": "200654050098",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ffaa0374b337849b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    }
  ]
}